Prevent 'remove' option from first medication
There is a requirement for the first medication not to be
removable by a user. Rather than managing this with CSS or
JavaScript it makes most sense to prevent these options being
provided by the server generated code.

--- a/app/views/escorts/_healthcare.html.erb
+++ b/app/views/escorts/_healthcare.html.erb
@@ -34,9 +34,11 @@
             <%= mf.text_field :description %>
             <%= mf.text_field :administration %>
             <%= mf.select :carrier, f.object.carrier_options, include_blank: true %>
-            <%= mf.check_box :_destroy %>
-            <%= mf.label :_destroy, class: 'remove-link' do %>
-              <%= t('healthcare.medication.remove') %>
+            <% if index > 0 %>
+              <%= mf.check_box :_destroy %>
+              <%= mf.label :_destroy, class: 'remove-link' do %>
+                  <%= t('healthcare.medication.remove') %>
+              <% end %>
             <% end %>
           </div>
         <% end %>
