Add 'no property' markers to PDF from latest design
The latest design iteration introduces these markers for the
outward in return journeys.

Add 'no property' markers to PDF from latest design

The latest design iteration introduces these markers for the
outward in return journeys.

--- a/app/assets/stylesheets/pdf/_handover_details.scss
+++ b/app/assets/stylesheets/pdf/_handover_details.scss
@@ -69,6 +69,12 @@
       @extend .row;
     }
     margin-top: $margin-top;
+    .markers > div {
+      @extend .emphasis-checkbox;
+    }
+    .label-inline, .check-box {
+      margin-bottom: 0;
+    }
   }
 
   .medication-administration {
