--- a/app/assets/stylesheets/pdf/_variables.scss
+++ b/app/assets/stylesheets/pdf/_variables.scss
@@ -27,6 +27,7 @@ $margin-right: ceil($margin-unit * 2);
 $margin-top: ceil($margin-unit * 2);
 $margin-large: ceil($margin-unit * 3);
 $margin-small: ($margin-unit / 2);
+$margin-extra-small: ($margin-unit / 4);
 $row-margin: $margin-unit * 1.6;
 $bordered-unit-padding: ($padding / 3);
 $font-weight-standard: 400;
