--- a/app/assets/stylesheets/pdf/_helper_classes.scss
+++ b/app/assets/stylesheets/pdf/_helper_classes.scss
@@ -193,3 +193,14 @@
     }
   }
 }
+
+.emphasis-checkbox {
+  @extend .col;
+  @extend .light-background;
+  padding: $padding-small;
+  padding-left: $padding-unit;
+  margin-right: $margin-right;
+  div {
+    margin-bottom: 0;
+  }
+}
