Update initial and continuation 'checks and events'
Introduces a number of changes in response to the latest design:

- Brings the initial and continuation pages into alignment (so that
  they each have alerts instructions and share the same heading
- Refactors the YAML to reflect the fact that most content is now
  shared between the two

--- a/app/views/pdfs/_checks_and_events_initial.html.erb
+++ b/app/views/pdfs/_checks_and_events_initial.html.erb
@@ -9,6 +9,10 @@
     </div>
   </div>
   <strong class="label"><%= t('.checks_and_significant_events') %></strong>
+  <div class="event-instructions">
+    <div><%= render('pdfs/exclamation_image') %><%= t('.highlight_current_risk') %></div>
+    <div><%= t('.noting_details') %></div>
+  </div>
   <div class="record-of-events">
     <table>
       <tr>
