--- a/app/assets/stylesheets/multiples.scss
+++ b/app/assets/stylesheets/multiples.scss
@@ -13,16 +13,38 @@
     font-weight: bold;
   }
 
-  input {
+  input[type="text"] {
     @extend .form-control;
-    width: 31%;
+    width: 25%;
     margin-right: 0.5em;
     border-width: 1px;
     border-color: $grey-2;
   }
 
-  input[type="checkbox"] {
+  .destroy {
     @extend .hidden-but-accessible;
+  }
+
+  .destroy:focus + label {
+    outline: 3px solid orange;
+  }
+
+  .block-label-multiple {
+    @extend .block-label;
+    display: inline;
+    float: none;
+    margin-right: 0.5em;
+    padding: 0.35em;
+    padding-left: 1.6em;
+    padding-right: 0.5em;
+    font-size: 0.9em;
+    input {
+      top: 2px;
+      left: 5px;
+      display: inline-block;
+      margin-right: 5px;
+      border: 1px solid #0070BB;
+    }
   }
 
   select {
@@ -30,11 +52,12 @@
     border-color: $grey-2;
     border-width: 1px;
     max-width: 15%;
+    margin-right: 0.5em;
   }
 
   .remove-link {
     @extend .styled-as-link;
-    margin-left: 1em;
+    margin-left: 0.5em;
   }
 
   .add-another {
