--- a/app/views/shared/_quick_actions.html.erb
+++ b/app/views/shared/_quick_actions.html.erb
@@ -3,4 +3,7 @@
   <ul>
     <li><%= link_to(t('quick_actions.preview'), pdf_path(escort)) %></li>
   </ul>
+  <ul>
+    <li><%= link_to(t('quick_actions.find_prisoner'), root_path) %></li>
+  </ul>
 </div>
