Align behaviour for multiples
Adds JavaScript, CSS and HTML for the offences multiples. Also
updates the healthcare multiples files to ensure the multiples
implementation across these features remains aligned.

--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -1,6 +1,6 @@
 @import 'design-patterns/alpha-beta';
 @import 'grid_layout';
-@import 'mps_mixins';
+@import 'mixins';
 
 .phase-banner {
   @include phase-banner($state: beta);
