--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,8 @@
 @import "elements/forms/form-validation";
 
 // Application
+@import "variables";
+@import "mixins";
 @import "helper_classes";
 @import "phase_banner";
 @import "header";
@@ -28,3 +30,5 @@
 @import "search";
 @import "user_authentication";
 @import "multiples";
+@import "offences";
+@import "medications";
