--- a/app/assets/stylesheets/ie8.scss
+++ b/app/assets/stylesheets/ie8.scss
@@ -1,6 +1,7 @@
 @import "shared_ie/global";
 @import "shared_ie/grid";
 @import "shared_ie/forms";
+@import "mixins";
 
 .grid-row {
   .column-three-quarters {
@@ -11,5 +12,67 @@
 .multiples-container {
   select {
     padding: 2px;
+  }
+}
+
+.inner-row {
+  .inner-col-one-third {
+    width: 30%;
+    margin-right: 1%;
+    display: inline-block;
+    *display: inline;
+    zoom: 1;
+
+  }
+
+  .inner-col-two-thirds {
+    width: 60%;
+    margin-right: 1%;
+    display: inline-block;
+    *display: inline;
+    zoom: 1;
+  }
+
+  .inner-col-half {
+    width: 48%;
+    margin-right: 1%;
+    display: inline-block;
+    *display: inline;
+    zoom: 1;
+  }
+}
+
+.offences {
+  .offence-field-label {
+    @include visually-hidden();
+  }
+  .offence-checkbox-label {
+    @include visually-hidden();
+  }
+  .offences-block-label {
+    @extend .block-label;
+    position: relative;
+    top: 19px;
+    padding: 0;
+    background-color: transparent;
+    border-color: transparent;
+    .input-wrapper {
+      padding: 3px;
+      background-color: #bfc1c3;
+    }
+    input {
+      margin: 0;
+      position: relative;
+      width: auto;
+      height: auto;
+      top: 0;
+      left: 0;
+    }
+  }
+}
+
+.medications {
+  .medication-field-label {
+    @include visually-hidden();
   }
 }
