Extract multiples coercer
Introduces a generic coercer for handling collections form params
or collections of models when a model is first injected into the
form object.

--- a/app/views/escorts/_healthcare.html.erb
+++ b/app/views/escorts/_healthcare.html.erb
@@ -33,7 +33,7 @@
       <div class="item-heading carried-by">
         <%= t('healthcare.medication.carried_by') %>
       </div>
-      <% f.object.backfilled_medications.each_with_index do |m, index| %>
+      <% f.object.medications.each_with_index do |m, index| %>
         <%= f.fields_for "medications[#{index}]", m do |mf| %>
           <div id="medication-<%= mf.index %>" class="item <%= 'shown' if m.persisted? %>">
             <%= mf.hidden_field :id %>
