Update PDF to reflect new design and add aliases
Changes the PDF coversheet to reflect the latest design. Also adds
a placeholder for aliases to be populated from the server where
applicable.

--- a/app/assets/stylesheets/pdf/_header.scss
+++ b/app/assets/stylesheets/pdf/_header.scss
@@ -1,6 +1,7 @@
 header {
   h1 {
-    @extend .styled-as-heading;
+    font-size: 100%;
+    font-weight: $font-weight-standard;
   }
   .heading {
     width: 30%;
