--- a/app/assets/stylesheets/pdf/_variables.scss
+++ b/app/assets/stylesheets/pdf/_variables.scss
@@ -36,4 +36,4 @@ $font-weight-bold: 700;
 // Composites
 $font-family: "Liberation Sans";
 $border: $border-width solid $dark_grey;
-$border-black: $border-width solid $black;
+$border-grey: $border-width solid $light_grey;
