--- a/app/assets/stylesheets/pdf/_prisoner_information.scss
+++ b/app/assets/stylesheets/pdf/_prisoner_information.scss
@@ -3,36 +3,38 @@
 
   > div {
     @extend .row;
+    &:last-child {
+      border-bottom: 1px solid $light_grey;
+    }
   }
 
   .information {
     @extend .col;
     width: 73%;
-    border-bottom: 1px solid $dark_grey;
     margin-right: $margin-unit;
   }
 
   .names {
     @extend .row;
+    margin-bottom: 1.5em;
     > div {
-      @extend .light-background;
-      @extend .cover-sheet-emphasis;
-      padding: $padding-small;
       display: inline-block;
-      text-transform: uppercase;
     }
     .family-name {
-      width: 52%;
-      @extend .input-margin;
+      width: 32%;
     }
     .forenames {
-      width: 43%;
+      width: 30%;
+    }
+    .extra-emphasis {
+      @extend .cover-sheet-emphasis;
+      font-size: $heading-font-size * 1.2;
     }
   }
 
   .image-placeholder {
     @extend .col;
-    border: $border-black;
+    border: $border-grey;
     background-color: $white;
     width: 11.5em;
     padding: 5.97em 1em;
@@ -48,19 +50,13 @@
     width: 15%;
     @extend .input-margin;
     @extend .col;
-    > div {
-      font-weight: $font-weight-standard;
-    }
   }
 
   .sex {
     margin-right: 0.5em;
-    width: 16%;
+    width: 11%;
     @extend .input-margin;
     @extend .col;
-    > div {
-      font-weight: $font-weight-standard;
-    }
   }
 
   .nationality {
@@ -75,6 +71,7 @@
 
   .identification-numbers {
     @extend .row;
+    margin-bottom: 1.5em;
     > div {
       @extend .input-margin;
       @extend .col;
@@ -83,11 +80,16 @@
       width: 30%;
     }
     .pnc-number {
-      width: 30%
+      width: 25%
     }
     .cro-number {
       width: 32%;
     }
   }
 
+  .aliases {
+    @extend .row;
+    padding-bottom: $padding-unit;
+    min-height: 3em;
+  }
 }
