--- a/app/views/pdfs/_record_of_handover.html.erb
+++ b/app/views/pdfs/_record_of_handover.html.erb
@@ -88,7 +88,9 @@
         <th class="narrow"><strong><%= t('.initial') %></strong></th>
       </tr>
       <tr>
-        <td rowspan="2" class="no-border-left strong-border-bottom strong-border-right"><%= t('.start_location') %></td>
+        <td rowspan="2" class="no-border-left strong-border-bottom strong-border-right">
+          <%= move.origin %>
+        </td>
         <td></td>
         <td><%= t('.dispatching_officer') %></td>
         <td></td>
@@ -105,7 +107,9 @@
         <td></td>
       </tr>
       <tr>
-        <td rowspan="2" class="no-border-left no-border-top strong-border-right"><%= t('.arrival_at_court') %></td>
+        <td rowspan="2" class="no-border-left no-border-top strong-border-right">
+          <%= move.destination %>
+        </td>
         <td></td>
         <td><%= t('.escort') %></td>
         <td></td>
@@ -122,7 +126,7 @@
         <td></td>
       </tr>
       <tr>
-        <td rowspan="2" class="no-border-left no-border-top strong-border-right strong-border-bottom"><%= t('.leaving_court') %></td>
+        <td rowspan="2" class="no-border-left no-border-top strong-border-right strong-border-bottom"></td>
         <td></td>
         <td><%= t('.dispatching_officer') %></td>
         <td></td>
@@ -139,7 +143,7 @@
         <td></td>
       </tr>
       <tr>
-        <td rowspan="2" class="no-border-left strong-border-right"><%= t('.arrival_at_prison') %></td>
+        <td rowspan="2" class="no-border-left strong-border-right"></td>
         <td></td>
         <td><%= t('.escort') %></td>
         <td></td>
