JavaScript and CSS for multiple [Needs tidying]
Interim commit of functional but sub-optimal implementation
of multiple aliases. This needs quite a bit of work before
being considered complete:

- Refactoring the code into a more logical order
- Updating tests and improving test coverage

--- a/app/views/escorts/_prisoner.html.erb
+++ b/app/views/escorts/_prisoner.html.erb
@@ -40,9 +40,13 @@
 <%= toggle_container(f, :has_aliases, 'prisoner') do %>
   <%= form_group_container(f, :aliases, classes: 'optional-section aliases') do %>
     <% f.object.aliases.each_with_index do |a, index| %>
-        <div id="alias-<%= index %>" class="item <%= 'shown' if a.present? %>">
-          <%= text_field_tag "prisoner[aliases][]", a %>
+      <div class="form-group <%= 'shown' if a.present? %>">
+        <label for="prisoner_aliases_<%= index %>" class="form-label-bold"><%= t('.alias') %></label>
+        <div>
+          <%= text_field_tag "prisoner[aliases][#{index}]", a, class: 'form-control' %>
         </div>
+      </div>
     <% end %>
   <% end %>
 <% end %>
+
