--- a/app/assets/stylesheets/pdf/_handover_details.scss
+++ b/app/assets/stylesheets/pdf/_handover_details.scss
@@ -89,7 +89,7 @@
       th {
         font-weight: $font-weight-bold;
       }
-      .carried-by {
+      .carrier {
         font-weight: $font-weight-standard;
       }
       .narrow {
