--- a/app/assets/stylesheets/pdf/_move_information.scss
+++ b/app/assets/stylesheets/pdf/_move_information.scss
@@ -14,7 +14,11 @@
     width: 40%;
   }
 
-  .from, .date-of-travel, .reason-for-move, .case-number {
+  .reason-for-move {
+    width: 40%;
+  }
+
+  .from, .date-of-travel, .case-number {
     width: 23%;
   }
 }
