--- a/app/views/escorts/_healthcare.html.erb
+++ b/app/views/escorts/_healthcare.html.erb
@@ -12,45 +12,68 @@
 <% end %>
 
 <%= text_toggle_container(f, :disabilities, 'healthcare') do %>
-  <%= form_group_container(f, :disabilities) do %>
-    <%= f.label :mpv_required, class: 'block-label inline' do %>
-      <%= f.check_box :mpv_required %>
-      <%= t('healthcare.mpv_required') %>
+    <%= form_group_container(f, :disabilities) do %>
+        <%= f.label :mpv_required, class: 'block-label inline' do %>
+            <%= f.check_box :mpv_required %>
+            <%= t('healthcare.mpv_required') %>
+        <% end %>
     <% end %>
-  <% end %>
-  <%= details_text_area_with_help_text(f, :disabilities, 'healthcare') %>
+    <%= details_text_area_with_help_text(f, :disabilities, 'healthcare') %>
 <% end %>
 
 <%= toggle_container(f, :medication, 'healthcare') do %>
-  <%= form_group_container(f, :medications, classes: 'optional-section') do %>
-    <div class="multiples-container">
-      <div class="item-heading">
-        <%= t('healthcare.medication.description') %>
-      </div>
-      <div class="item-heading">
-        <%= t('healthcare.medication.administration') %>
-      </div>
-      <div class="item-heading carried-by">
-        <%= t('healthcare.medication.carried_by') %>
-      </div>
-      <% f.object.medications.each_with_index do |m, index| %>
-        <%= f.fields_for "medications[#{index}]", m do |mf| %>
-          <div id="medication-<%= mf.index %>" class="item <%= 'shown' if m.persisted? %>">
-            <%= mf.hidden_field :id %>
-            <%= mf.text_field :description %>
-            <%= mf.text_field :administration %>
-            <%= mf.select :carrier, f.object.carrier_options, include_blank: true %>
-            <% if index > 0 %>
-              <%= mf.check_box :_destroy %>
-              <%= mf.label :_destroy, class: 'remove-link' do %>
-                  <%= t('healthcare.medication.remove') %>
-              <% end %>
+    <%= form_group_container(f, :medications, classes: 'optional-section') do %>
+        <div class="multiples-container medications-container">
+          <div class="inner-row only-visible-at-larger">
+            <div class="inner-col-one-third">
+              <div class="item-heading">
+                <%= t('healthcare.medication.description') %>
+              </div>
+            </div>
+            <div class="inner-col-one-third">
+              <div class="item-heading">
+                <%= t('healthcare.medication.administration') %>
+              </div>
+            </div>
+            <div class="inner-col-one-third">
+              <div class="item-heading carrier">
+                <%= t('healthcare.medication.carrier') %>
+              </div>
+            </div>
+          </div>
+          <div class="medications">
+            <% f.object.medications.each_with_index do |m, index| %>
+                <%= f.fields_for "medications[#{index}]", m do |mf| %>
+                    <div id="medication-<%= mf.index %>" class="inner-row item <%= 'shown' if m.persisted? %>">
+                      <div class="inner-col-one-third">
+                        <%= mf.hidden_field :id %>
+                        <%= mf.label :description, class: 'medication-field-label' %>
+                        <%= mf.text_field :description %>
+                      </div>
+                      <div class="inner-col-one-third">
+                        <%= mf.label :administration, class: 'medication-field-label' %>
+                        <%= mf.text_field :administration %>
+                      </div>
+                      <div class="inner-col-one-third">
+                        <div class="inner-col-two-thirds">
+                          <%= mf.label :carrier, class: 'medication-field-label' %>
+                          <%= mf.select :carrier, f.object.carrier_options, include_blank: true %>
+                        </div>
+                        <% if index > 0 %>
+                            <div class="inner-col-one-third">
+                              <%= mf.check_box :_destroy, class: 'destroy' %>
+                              <%= mf.label :_destroy, class: 'remove-link' do %>
+                                  <%= t('healthcare.medication.remove') %>
+                              <% end %>
+                            </div>
+                        <% end %>
+                      </div>
+                    </div>
+                <% end %>
             <% end %>
           </div>
-        <% end %>
-      <% end %>
-    </div>
-  <% end %>
+        </div>
+    <% end %>
 <% end %>
 
 <%= single_field(f, :medical_professional_name) %>
