--- a/app/views/pdfs/_handover_details.erb
+++ b/app/views/pdfs/_handover_details.erb
@@ -46,7 +46,7 @@
     <table>
       <tr>
         <th colspan="2" class="hidden-borders"></th>
-        <th colspan="2" class="carried-by"><%= t('.medication_carried_by') %></th>
+        <th colspan="2" class="carrier"><%= t('.medication_carrier') %></th>
       </tr>
       <tr>
         <th><%= t('.medication_description') %></th>
