--- a/app/assets/stylesheets/_multiples.scss
+++ b/app/assets/stylesheets/_multiples.scss
@@ -1,4 +1,5 @@
 .multiples-container {
+  word-wrap: break-word;
 
   .item {
     margin-bottom: 1em;
@@ -8,17 +9,22 @@
   .item-heading {
     display: inline-block;
     font-size: 90%;
-    width: 31%;
-    margin-right: 0.5em;
     font-weight: bold;
   }
 
   input[type="text"] {
     @extend .form-control;
-    width: 25%;
     margin-right: 0.5em;
+    margin-top: 0.4em;
     border-width: 1px;
     border-color: $grey-2;
+    width: 100%;
+  }
+
+  select {
+    @extend .form-control;
+    border: 1px solid $grey-2;
+    width: 100%;
   }
 
   .destroy {
@@ -29,35 +35,8 @@
     outline: 3px solid orange;
   }
 
-  .block-label-multiple {
-    @extend .block-label;
-    display: inline;
-    float: none;
-    margin-right: 0.5em;
-    padding: 0.35em;
-    padding-left: 1.6em;
-    padding-right: 0.5em;
-    font-size: 0.9em;
-    input {
-      top: 2px;
-      left: 5px;
-      display: inline-block;
-      margin-right: 5px;
-      border: 1px solid #0070BB;
-    }
-  }
-
-  select {
-    @extend .form-control;
-    border-color: $grey-2;
-    border-width: 1px;
-    max-width: 15%;
-    margin-right: 0.5em;
-  }
-
   .remove-link {
     @extend .styled-as-link;
-    margin-left: 0.5em;
   }
 
   .add-another {
