--- a/app/views/escorts/_offences.html.erb
+++ b/app/views/escorts/_offences.html.erb
@@ -10,46 +10,72 @@
   %>
 <% end %>
 
-<fieldset>
+<fieldset class="offences">
   <%= title_text :offences, 'offences' %>
   <%= f.label('offences', t('offences.offences.help_text')) %>
   <%= form_group_container(f, :offences) do %>
-    <div class="multiples-container">
-      <div class="item-heading">
-        <%= t('offences.offences.offence_type') %>
-      </div>
-      <div class="item-heading">
-        <%= t('offences.offences.offence_status') %>
-      </div>
-      <div class="item-heading">
-        <%= t('offences.offences.not_for_release') %>
-      </div>
-      <div class="item-heading">
-        <%= t('offences.offences.current_offence') %>
-      </div>
-      <% f.object.offence_details.each_with_index do |offence_details_form, index| %>
-        <%= f.fields_for "offence_details[#{index}]", offence_details_form do |of| %>
-          <div id="offence-<%= of.index %>" class="item <%= 'shown' if offence_details_form.persisted? %>">
-            <%= of.hidden_field :id %>
-            <%= of.text_field :offence_type %>
-            <%= of.select :offence_status, f.object.status_options, include_blank: true %>
-            <%= of.label :not_for_release, class: 'block-label-multiple' do %>
-              <%= of.check_box :not_for_release %>
-                <%= t('offences.offences.not_for_release') %>
-            <% end %>
-            <%= of.label :current_offence, class: 'block-label-multiple' do %>
-              <%= of.check_box :current_offence %>
-                <%= t('offences.offences.current_offence') %>
-            <% end %>
-            <% if index > 0 %>
-              <%= of.check_box :_destroy, class: 'destroy' %>
-              <%= of.label :_destroy, class: 'remove-link' do %>
-                  <%= t('offences.offences.remove') %>
-              <% end %>
-            <% end %>
+      <div class="multiples-container offences-container">
+        <div class="inner-row only-visible-at-larger">
+          <div class="item-heading inner-col-one-third">
+            <%= t('offences.offences.offence_type') %>
           </div>
+          <div class="item-heading inner-col-one-third">
+            <%= t('offences.offences.offence_status') %>
+          </div>
+          <div class="item-heading inner-col-one-third">
+            <div class="inner-col-one-third">
+              <%= t('offences.offences.not_for_release') %>
+            </div>
+            <div class="inner-col-one-third">
+              <%= t('offences.offences.current_offence') %>
+            </div>
+          </div>
+        </div>
+        <% f.object.offence_details.each_with_index do |offence_details_form, index| %>
+            <%= f.fields_for "offence_details[#{index}]", offence_details_form do |of| %>
+                <div id="offence-<%= of.index %>" class="item inner-row <%= 'shown' if offence_details_form.persisted? %>">
+                  <div class="inner-col-one-third">
+                    <%= of.hidden_field :id %>
+                    <%= of.label :offence_type, class: 'offence-field-label' %>
+                    <%= of.text_field :offence_type %>
+                  </div>
+                  <div class="inner-col-one-third">
+                    <%= of.label :offence_status, class: 'offence-field-label' %>
+                    <%= of.select :offence_status, f.object.status_options, include_blank: true %>
+                  </div>
+                  <div class="inner-col-one-third">
+                    <div class="inner-col-one-third">
+                      <%= of.label :not_for_release, class: 'offences-block-label' do %>
+                        <div class="input-wrapper">
+                          <%= of.check_box :not_for_release %>
+                        </div>
+                        <div class="offence-checkbox-label">
+                          <%= t('offences.offences.not_for_release') %>
+                        </div>
+                    <% end %>
+                  </div>
+                  <div class="inner-col-one-third">
+                    <%= of.label :current_offence, class: 'offences-block-label' do %>
+                          <div class="input-wrapper">
+                            <%= of.check_box :current_offence %>
+                          </div>
+                          <div class="offence-checkbox-label">
+                          <%= t('offences.offences.current_offence') %>
+                          </div>
+                      <% end %>
+                    </div>
+                    <div class="inner-col-one-third">
+                      <% if index > 0 %>
+                          <%= of.check_box :_destroy, class: 'destroy' %>
+                          <%= of.label :_destroy, class: 'remove-link' do %>
+                              <%= t('offences.offences.remove') %>
+                          <% end %>
+                      <% end %>
+                    </div>
+                  </div>
+                </div>
+            <% end %>
         <% end %>
-      <% end %>
-    </div>
+      </div>
   <% end %>
 </fieldset>
